--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         <p>&copy; 2025 Cafe Da Vinci. All rights reserved.</p>
     </footer>
 
-    <script src="/scripts/scripts_about.js"></script>
+    <script src="scripts/scripts_about.js"></script>
 </body>
 
 </html>
