--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/styles/styles_contact.css" />
+    <link rel="stylesheet" href="styles/styles_contact.css" />
 </head>
 
 <body>
@@ -96,7 +96,7 @@
         <p>&copy; 2025 Cafe Da Vinci. All rights reserved.</p>
     </footer>
 
-    <script src="/scripts/scripts_contact.js"></script>
+    <script src="scripts/scripts_contact.js"></script>
 </body>
 
 </html>
