--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Da Vinci</title>
-    <link rel="stylesheet" href="/styles/styles_index.css" />
-    <script defer src="/scripts/script_index.js"></script>
+    <link rel="stylesheet" href="styles/styles_index.css" />
+    <script defer src="scripts/script_index.js"></script>
 </head>
 
 <body>
