--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu</title>
-    <link rel="stylesheet" href="/styles/styles_menu.css" />
+    <link rel="stylesheet" href="styles/styles_menu.css" />
 </head>
 
 <body>
@@ -191,7 +191,7 @@
         <p>&copy; 2025 Cafe Da Vinci. All rights reserved.</p>
     </footer>
 
-    <script src="/scripts/script_menu.js"></script>
+    <script src="scripts/script_menu.js"></script>
 </body>
 
 </html>
