--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo">
             <!-- Wrap the logo in an anchor tag -->
             <a href="index.html">
-                <img src="/images/logo.png" alt="Authentic Cafe Logo" />
+                <img src="images/logo.png" alt="Authentic Cafe Logo" />
             </a>
         </div>
         <nav>
@@ -41,7 +41,7 @@
 
         <section class="highlights">
             <article>
-                <img src="/images/variety.png" alt="Delicious pastry" />
+                <img src="images/variety.png" alt="Delicious pastry" />
                 <h3>Varieties of Food</h3>
                 <p>
                     Enjoy an array of freshly made croissants, cupcakes, and pastries,
@@ -50,13 +50,13 @@
                 </p>
             </article>
             <article>
-                <img src="/images/beans.png" alt="Cup of coffee" />
+                <img src="images/beans.png" alt="Cup of coffee" />
                 <h3>Our Coffee</h3>
                 <p>Crafted from the finest beans sourced from around the world.</p>
                 <button class="cta-button">Shop Now</button>
             </article>
             <article>
-                <img src="/images/diverse.png" alt="Cafe ambiance" />
+                <img src="images/diverse.png" alt="Cafe ambiance" />
                 <h3>Perfect Atmosphere</h3>
                 <p>
                     Enjoy a welcoming environment designed for relaxation, productivity,
@@ -68,7 +68,7 @@
         <section class="whats-happening">
             <h2>What's Happening?</h2>
             <div class="slide-up-image">
-                <img src="/images/celebration.png" alt="Cafe Anniversary Celebration" />
+                <img src="images/celebration.png" alt="Cafe Anniversary Celebration" />
             </div>
             <div class="celebration-message">
                 <p><strong>We're Celebrating Our First Anniversary!</strong></p>
